# cpu-rust

./: Cargo.toml  LICENSE.md  README.md  SPEC.md  TODO.md
src/: cpu.rs  heap.rs  lib.rs  main.rs  memory.rs  ops.rs  stack.rs
